Update and improve tests